# quantum

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  README.md  quantum.h.in  quantum.pc.in
.github/workflows/: cmake-single-platform.yml
cmake/: QuantumConfig.cmake.in  quantum.pc.in
docs/: annotated.html  annotated_dup.js  classes.html  dir_04b23b10b64ba29c8ddc0dcac6e14bdf.html  dir_18a2ce22097343395ff268676f77c78e.html  dir_3808e3f8fe545b07b1d2715928fb0eea.html  dir_42674786bb08260f7ae12720ad3efdd3.html  dir_42674786bb08260f7ae12720ad3efdd3.js  dir_4295b5b005b6e1286cf79f8f9d219015.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.js  dir_4e62df60632558bcacdb794101a6296d.html  dir_54f164069e167d25e40e32a18234bd5e.html  dir_54f164069e167d25e40e32a18234bd5e.js  dir_63c7fdcede55f0b9e5bbeb9e56e1619e.html  dir_63c7fdcede55f0b9e5bbeb9e56e1619e.js  dir_650ee533936399e683a30afb9473a469.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6af2ef27bb7c7dee88539d802d2c2736.html  dir_731c156802ea0ae92ed1fb09b28b6dad.html  dir_731c156802ea0ae92ed1fb09b28b6dad.js  dir_7daab3f027fc86625ac117a1b0a1ca9a.html  dir_7daab3f027fc86625ac117a1b0a1ca9a.js  dir_8b131e8d7ec1956225d53a15982db1a1.html  dir_95c1e1163eb894725089b3c6cee5ee2a.html  dir_a2265b2fa1971d3c1ea969d20b95736a.html  dir_a2265b2fa1971d3c1ea969d20b95736a.js  dir_af7b9a5d76aefd65a33005a6b9280ee2.html  dir_b495a66e2d53ba8b363862d8d15c2942.html  dir_b495a66e2d53ba8b363862d8d15c2942.js  dir_b7878ad5ecbf2506f4125b9d34c97e45.html  dir_c4c665ead5a782995ec1770cd465ac21.html  dir_f52106228c8177d2f8ff905c3e6bc3de.html  dir_f52106228c8177d2f8ff905c3e6bc3de.js  files.html  files_dup.js  functions.html  functions_0x7e.html  functions_a.html  functions_b.html  (+69 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  (+105 more)
quantum/: CMakeLists.txt  quantum.h  quantum_allocator.h  quantum_allocator_traits.h  quantum_auxiliary.h  quantum_buffer.h  quantum_capture.h  quantum_cls.h  quantum_condition_variable.h  quantum_configuration.h  quantum_context.h  quantum_contiguous_pool_manager.h  quantum_coroutine_pool_allocator.h  quantum_coroutine_state_handler.h  quantum_dispatcher.h  quantum_dispatcher_core.h  quantum_exceptions.h  quantum_functions.h  quantum_future.h  quantum_future_state.h  quantum_heap_allocator.h  quantum_io_queue.h  quantum_io_task.h  quantum_local.h  quantum_macros.h  quantum_mutex.h  quantum_promise.h  quantum_queue_statistics.h  quantum_read_write_mutex.h  quantum_read_write_spinlock.h  quantum_shared_state.h  quantum_spinlock.h  quantum_spinlock_traits.h  quantum_stack_allocator.h  quantum_task.h  quantum_task_id.h  quantum_task_queue.h  quantum_task_state_handler.h  quantum_thread_traits.h  quantum_traits.h  (+1 more)
quantum/impl/: quantum_auxiliary_impl.h  quantum_capture_impl.h  quantum_cls_impl.h  quantum_condition_variable_impl.h  quantum_configuration_impl.h  quantum_context_impl.h  quantum_contiguous_pool_manager_impl.h  quantum_coroutine_pool_allocator_impl.h  quantum_dispatcher_core_impl.h  quantum_dispatcher_impl.h  quantum_future_impl.h  quantum_io_queue_impl.h  quantum_io_task_impl.h  quantum_local_impl.h  quantum_mutex_impl.h  quantum_promise_impl.h  quantum_queue_statistics_impl.h  quantum_read_write_mutex_impl.h  quantum_read_write_spinlock_impl.h  quantum_shared_state_impl.h  quantum_spinlock_impl.h  quantum_spinlock_traits_impl.h  quantum_stl_impl.h  quantum_task_id_impl.h  quantum_task_impl.h  quantum_task_queue_impl.h  quantum_task_state_handler_impl.h
quantum/interface/: quantum_icontext.h  quantum_icontext_base.h  quantum_icoro_context.h  quantum_icoro_context_base.h  quantum_icoro_future.h  quantum_icoro_future_base.h  quantum_icoro_sync.h  quantum_ipromise.h  quantum_ipromise_base.h  quantum_iqueue.h  quantum_iqueue_statistics.h  quantum_itask.h  quantum_itask_accessor.h  quantum_iterminate.h  quantum_ithread_context.h  quantum_ithread_context_base.h  quantum_ithread_future.h  quantum_ithread_future_base.h  quantum_ithread_promise.h
quantum/util/: quantum_cls_guard.h  quantum_drain_guard.h  quantum_future_joiner.h  quantum_generic_future.h  quantum_local_variable_guard.h  quantum_sequence_key_statistics.h  quantum_sequencer.h  quantum_sequencer_configuration.h  quantum_sequencer_configuration_base.h  quantum_sequencer_configuration_experimental.h  quantum_sequencer_experimental.h  quantum_sequencer_lite.h  quantum_sequencer_lite_configuration.h  quantum_sequencer_lite_task.h  quantum_sequencer_task_experimental.h  quantum_spinlock_util.h  quantum_util.h
quantum/util/impl/: quantum_cls_guard_impl.h  quantum_future_joiner_impl.h  quantum_generic_future_impl.h  quantum_local_variable_guard_impl.h  quantum_sequencer_configuration_base_impl.h  quantum_sequencer_configuration_experimental_impl.h  quantum_sequencer_configuration_impl.h  quantum_sequencer_experimental_impl.h  quantum_sequencer_impl.h  quantum_sequencer_lite_configuration_impl.h  quantum_sequencer_lite_impl.h  quantum_sequencer_lite_task_impl.h  quantum_sequencer_task_experimental_impl.h  quantum_spinlock_util_impl.h  quantum_util_impl.h
src/: CMakeLists.txt  quantum_buffer.h  quantum_capture.h  quantum_condition_variable.h  quantum_context.h  quantum_dispatcher.h  quantum_future.h  quantum_io_task.h  quantum_macros.h  quantum_mutex.h  quantum_queue_statistics.h  quantum_stack_allocator.h  quantum_stack_traits.h  quantum_task.h  quantum_task_queue.h  quantum_thread_traits.h  quantum_traits.h
tests/: CMakeLists.txt  quantum_auxiliary_tests.cpp  quantum_benchmark.cpp  quantum_coro_ranges.cpp  quantum_coro_ranges_tests.cpp  quantum_coroutine_state_handler_tests.cpp  quantum_fixture.cpp  quantum_fixture.h  quantum_generic_future_tests.cpp  quantum_id_tests.cpp  quantum_locks_tests.cpp  quantum_perf_utils.cpp  quantum_perf_utils.h  quantum_sequencer_experimental_tests.cpp  quantum_sequencer_lite_tests.cpp  quantum_sequencer_test_common.h  quantum_sequencer_tests.cpp  quantum_spinlocks_tests.cpp  quantum_task_state_handler_tests.cpp  quantum_tests.cpp  sequencer_tests.cpp
(+543 files in other folders)
